--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,16 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+  - assets/images/meal1.png
+  - assets/images/meal2.png
+  - assets/images/meal3.png
+  - assets/images/meal4.png
+  - assets/images/meal5.png
+  - assets/images/btn_pls.png
+  - assets/images/ic_dish.png
+  - assets/images/ic_in.png
+  - assets/images/background.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
