--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_native_splash: ^2.1.0
   bouncing_widget: ^2.0.0
   easy_localization: ^3.0.3
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
